Fix checkbox focus ring z-index

--- a/source/Checkbox.css
+++ b/source/Checkbox.css
@@ -60,6 +60,7 @@
 .rrui__checkbox__input
 {
 	position : absolute;
+	z-index  : 3;
 	left     : -40%;
 	top      : -40%;
 	width    : 180%;
@@ -71,6 +72,8 @@
 .rrui__checkbox__box
 {
 	display        : block;
+	position       : relative;
+	z-index        : 2;
 	width          : 100%;
 	height         : 100%;
 	fill           : currentColor;
@@ -90,6 +93,12 @@
 	color : var(--rrui-checkbox-color-focus);
 }
 
+/* Checkbox color (:focus) (:checked) */
+.rrui__checkbox__input:focus + .rrui__checkbox__box--checked
+{
+	color : var(--rrui-checkbox-color-checked-focus);
+}
+
 /* Checkbox color (:checked / :active) */
 .rrui__checkbox__input:active + .rrui__checkbox__box
 {
@@ -101,7 +110,7 @@
 	position      : absolute;
 	top           : 0;
 	left          : 0;
-	z-index       : -1;
+	z-index       : 1;
 	width         : 100%;
 	height        : 100%;
 	background    : var(--rrui-checkbox-fill-color);
@@ -116,24 +125,25 @@
 }
 
 /* Focus ring. */
-.rrui__checkbox__input + .rrui__checkbox__box + .rrui__checkbox__box-background:before
+
+.rrui__checkbox__focus-ring
 {
 	display: block;
-	content: "";
 	position: absolute;
 	left: calc(-1 * (var(--rrui-checkbox-focus-ring-size) - 100%) / 2);
 	top: calc(-1 * (var(--rrui-checkbox-focus-ring-size) - 100%) / 2);
 	width: var(--rrui-checkbox-focus-ring-size);
 	height: var(--rrui-checkbox-focus-ring-size);
 	border-radius: 50%;
+	z-index: 0;
 }
 
-.rrui__checkbox__input:focus + .rrui__checkbox__box + .rrui__checkbox__box-background:before
+.rrui__checkbox__input:focus + .rrui__checkbox__box + .rrui__checkbox__box-background + .rrui__checkbox__focus-ring
 {
 	background-color: var(--rrui-checkbox-focus-ring-background-color);
 }
 
-.rrui__checkbox__input:active + .rrui__checkbox__box + .rrui__checkbox__box-background:before
+.rrui__checkbox__input:active + .rrui__checkbox__box + .rrui__checkbox__box-background + .rrui__checkbox__focus-ring
 {
 	background-color: var(--rrui-checkbox-focus-ring-background-color-active);
 }
